# agent-retina

./: .env.example  .gitignore  Cargo.toml  README.md  colorado_springs_dates.txt  startup.md  testing.md
crates/retina-cli/: Cargo.toml
crates/retina-cli/src/: app.rs  chat.rs  cli.rs  controller.rs  main.rs  maintenance.rs  output.rs  runtime.rs
crates/retina-kernel/: Cargo.toml
crates/retina-kernel/src/: execution.rs  lib.rs  loop_state.rs  result_helpers.rs  router.rs  support.rs  task_shape.rs  tests.rs
crates/retina-llm-claude/: Cargo.toml
crates/retina-llm-claude/src/: config.rs  lib.rs  payload.rs  planner.rs  response.rs
crates/retina-mcp-client/: Cargo.toml
crates/retina-mcp-client/src/: lib.rs
crates/retina-memory-sqlite/: Cargo.toml
crates/retina-memory-sqlite/migrations/: V10__agent_manifest_model_id.sql  V1__initial_schema.sql  V2__agent_manifest_scope.sql  V3__agent_manifest_lifecycle.sql  V4__runtime_tasks.sql  V5__runtime_task_parent_link.sql  V6__agent_manifest_tool_scope.sql  V7__agent_manifest_mcp_requirements.sql  V8__agent_manifest_role_prompt.sql  V9__agent_manifest_initial_prompt.sql
crates/retina-memory-sqlite/src/: consolidation.rs  embedder.rs  lib.rs  manifest.rs  registry.rs  retrieval.rs  storage.rs
crates/retina-runtime/: Cargo.toml
crates/retina-runtime/src/: command.rs  lib.rs  model.rs  output.rs  registry.rs  supervisor.rs  timeline.rs
crates/retina-shell-cli/: Cargo.toml
crates/retina-shell-cli/src/: file_edit.rs  file_ops.rs  lib.rs  notebook_edit.rs  policy.rs  process_control.rs  read_state.rs  state_helpers.rs  text_write.rs
crates/retina-test-utils/: Cargo.toml
crates/retina-test-utils/src/: lib.rs
crates/retina-tools/: Cargo.toml
crates/retina-tools/src/: builtins.rs  executor.rs  lib.rs  policy.rs  registry.rs
crates/retina-traits/: Cargo.toml
crates/retina-traits/src/: lib.rs
crates/retina-transport-local/: Cargo.toml
crates/retina-transport-local/src/: lib.rs  specialists.rs
crates/retina-types/: Cargo.toml
crates/retina-types/src/: actions.rs  agents.rs  core.rs  execution.rs  fabrication.rs  lib.rs  memory.rs  reasoning.rs  task_state.rs  tasking.rs
docs/: README.md  agent_retina.md  architecture.md  harness.md  memory_layers.md  research_compaction.md  research_memory.md  research_memory_v2.md  research_overview.md  rest_wasm.md  retina_external_integration_direction.md  roadmap.md  trait_contracts.md  v1_plan.md  vessel.md
docs/audits/: context-and-memory-layer-audit-2026-03-17.md  mixed-overlap-audit-2026-03-19.md  source-brave-mcp-alignment-audit-2026-05-15.md  source-file-output-alignment-audit-2026-05-15.md  source-loop-and-operator-surface-alignment-audit-2026-05-15.md
docs/plans/: README.md  code_source_brave_mcp_adoption_plan.md  code_source_core_refactor_master_plan.md  code_source_file_edit_adoption_plan.md  code_source_form_filling_adoption_plan.md  code_source_harness_adoption_plan.md  compaction-alignment-plan.md  harness-interpretation-gut-plan.md  model-first-kernel-refactor-plan.md  multi_device_specialist_runtime_plan.md  research-aligned-execution-plan.md  source_file_project_inspection_alignment_plan.md  source_pipeline_fine_detail_alignment_plan.md  source_style_followup_continuity_plan.md  u1-task-shape-and-completion-plan.md  u2-document-and-data-ingestion-plan.md  u3-synthesis-and-output-plan.md  u4-terminal-freedom-and-scripts-plan.md  u5-memory-and-reuse-plan.md  u6-live-context-and-loop-hardening-plan.md  v1-build-plan.md  v1_useful_worker.md
temp/: worker_notes.md
tmp/: worker_check.txt
tmp/retina-home/: config.toml
tmp/retina-home/root/: manifest.toml
