[package]
name = "retina-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
dotenvy.workspace = true
retina-kernel = { path = "../retina-kernel" }
retina-llm-claude = { path = "../retina-llm-claude" }
retina-mcp-client = { path = "../retina-mcp-client" }
retina-memory-sqlite = { path = "../retina-memory-sqlite" }
retina-runtime = { path = "../retina-runtime" }
retina-shell-cli = { path = "../retina-shell-cli" }
retina-tools = { path = "../retina-tools" }
retina-transport-local = { path = "../retina-transport-local" }
retina-traits = { path = "../retina-traits" }
retina-types = { path = "../retina-types" }
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
