[package]
name = "retina-mcp-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
retina-traits = { path = "../retina-traits" }
retina-types = { path = "../retina-types" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
