[package]
name = "retina-memory-sqlite"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
fastembed.workspace = true
refinery.workspace = true
retina-traits = { path = "../retina-traits" }
retina-types = { path = "../retina-types" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlite-vec.workspace = true
tempfile.workspace = true
toml.workspace = true

[build-dependencies]
refinery.workspace = true
