[package]
name = "retina-shell-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
retina-traits = { path = "../retina-traits" }
retina-types = { path = "../retina-types" }
serde_json.workspace = true
tempfile.workspace = true
