[package]
name = "retina-shell-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
csv.workspace = true
dirs.workspace = true
pdf-extract.workspace = true
retina-traits = { path = "../retina-traits" }
retina-types = { path = "../retina-types" }
serde_json.workspace = true
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
lopdf.workspace = true
